--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@ Hello World
 
 <html>
     <head>
-        <title>Google Project</title>
+        <title>Google Project - Jack Stanton</title>
     </head>
 </html>
