--- a/index.html
+++ b/index.html
@@ -4,4 +4,11 @@ Hello World
     <head>
         <title>Google Project - Jack Stanton</title>
     </head>
+
+    <body>
+        <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, perspiciatis consectetur repudiandae in temporibus laborum autem illum provident unde, dolorem quia tempora, odit assumenda cupiditate dolore consequatur nostrum totam ullam!
+        </p>
+    </body>
+
 </html>
