--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-Hello World
-
 <html>
     <head>
         <title>Google Project - Jack Stanton</title>
     </head>
 
+    <header>Hello World</header>
     <body>
         <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, perspiciatis consectetur repudiandae in temporibus laborum autem illum provident unde, dolorem quia tempora, odit assumenda cupiditate dolore consequatur nostrum totam ullam!
