--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
         <title>Google Project - Jack Stanton</title>
     </head>
+    <div><h1 #hw>Hello World</h1></div>
 
-    <h1 #hw>Hello World</h1>
     <body>
         <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, perspiciatis consectetur repudiandae in temporibus laborum autem illum provident unde, dolorem quia tempora, odit assumenda cupiditate dolore consequatur nostrum totam ullam!
