--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <link rel="stylesheet" type="text/css" href="Google-Project/style.css">
+    <link rel="stylesheet" type="text/css" href="GOOGLE-PROJECT/style.css">
     <head>
         <title>Google Project - Jack Stanton</title>
     </head>
