--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Google Project - Jack Stanton</title>
     </head>
-    <div><h1 #hw>Hello World</h1></div>
+    <div><h1 #hw>Google</h1></div>
 
     <body>
         <p>
