--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <title>Google Project - Jack Stanton</title>
     </head>
+    
     <div><h1 #hw>Google</h1></div>
 
     <body>
+       
+        <div id="para">
         <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, perspiciatis consectetur repudiandae in temporibus laborum autem illum provident unde, dolorem quia tempora, odit assumenda cupiditate dolore consequatur nostrum totam ullam!
         </p>
@@ -18,6 +21,8 @@
          <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, perspiciatis consectetur repudiandae in temporibus laborum autem illum provident unde, dolorem quia tempora, odit assumenda cupiditate dolore consequatur nostrum totam ullam!
         </p>
+        </div>
+
     </body>
 
 </html>
