--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
          <div>
-             <h1 #hw>Google</h1>
+             <h1 id="google">Google</h1>
          </div>
         
     <div id="para">
