--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     
     <body>
          <div>
-             <h1 id="google">Google</h1>
+             <img src="gl.svg">
          </div>
+
 
     </body>
 
