--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <body>
          <div>
-             <img src="gl.svg">
+             <img src="img/gl.svg" class="center">
          </div>
 
 
