--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
          <div>
              <img src="img/gl.svg" class="center">
          </div>
+         
+         <div class="container">
+			<input type="text" placeholder="Search Google or type a URL" class="search">
+		</div>
 
+        <div>
+            <a href="https://mail.google.com/mail/?tab=rm&ogbl" target="_self" class="gmail">Gmail</a>
+        </div>
+        <div>
+            <a href="https://www.google.com/imghp?hl=en&tab=ri&ogbl" target="_self" class="img">Images</a>
+        </div>
 
     </body>
 
