--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <div>
             <a href="https://www.google.com/imghp?hl=en&tab=ri&ogbl" target="_self" class="img">Images</a>
         </div>
+        <div>
+            <a href="google1.com"><img src="img/mic.svg" class="mic"></a>
+        </div>
+        <div>
+            <a href="google2.com"><img src="img/cam.svg" class="cam"></a>
+        </div>
 
     </body>
 
