--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
         </div>
         <div>
             <a href="google2.com"><img src="img/cam.svg" class="cam"></a>
+        </div> 
+        <div>
+           <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Faccounts.google.com%2Fsignin%2Fchrome%2Fsync%2Ffinish%3Fcontinue%3Dhttps%253A%252F%252Fwww.google.com%252F%26est%3DAOuLH6A1L-TX2eWqrhFNWmZpPyyUGG94QuuzqCKKeiA-68rTCMYTRvbh4gGOA9hl2c8VIyTYL8g30ugtjcGzZwU&ssp=1&flowName=GlifDesktopChromeSync&ddm=0&dsh=S-1257249486%3A1720623060750280">
+           <img src="img/sn.png" target="_self" class="sign"></a>
+           <label class="in">Sign in</label>
         </div>
-
+    
     </body>
 
 </html>
