--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
            <img src="img/sn.png" target="_self" class="sign"></a>
            <label class="in">Sign in</label>
         </div>
+        <div>
+            <a href="https://chromewebstore.google.com/?hl=en">
+            <img src="img/web.png" target="_self" class="chrome"></a>
+            <label class="web">Chrome Web...</label>
+         </div>
+         <div>
+            <img src="img/search.svg" class="lookup">
+         </div>
     
     </body>
 
